box/5.1/modules/ROOT/pages/box-connector-config-topics.adoc
= Box Connector 5.1 Additional Configuration
:page-aliases: connectors::box/box-connector-config-topics.adoc

To use Box Connector in a Mule app, configure a global Box configuration element to use by as many Box connectors as needed for your application.

== Configure the Box Connector Global Element

. Click the *Global Elements* tab at the base of the canvas.
. In the *Global Configuration Elements* screen, click *Create*.
. In the *Choose Global Type* wizard, expand Connector Configuration and select *Mule-box-connector Config* and click *OK*. +
In the configuration screen for `OAUTH 2.0` with Authorization Code, grant type displays. This is the only configuration that Box Connector supports.
. Configure the properties as described here.
+
[%header,cols="30a,70a"]
|===
|Parameter|Description
|`clientId`|Specifies the client identifier as assigned by the authorization server when the client application was registered.
|`clientSecret`|Specifies the client application's client secret.
|`host`|The host where Box exposes its API.
|`port`|The port where Box services listen for incoming requests. Default: 443
|`basePath`|The base path for the Box services' base URI.
|`protocol`|The protocol which Box services follow. Default: HTTPS
|`localCallbackPath`|The local callback path. Default: /callback
|`localCallbackConfig`|The HTTP Listener configuration that is used to configure the local authorization URL.
|`externalCallbackUrl`|The redirect URL that is configured in the client application.
|`localAuthorizationUrl`|Local authorization URL that is used to initiate an `OAuth2` dance.
|`authorizationUrl`|The authorization URL to request for an authorization code.
|`accessTokenUrl`|Specifies the URL for requesting an access token.
|===
+
In the `OAUTH 2.0` configuration screen, the placeholder values refer to a configuration file `mule-artifact.properties` placed in the
`src/main/resources` folder of your project.
+
You can either enter your credentials into the global configuration properties, or reference a configuration file that contains these values.
+
NOTE: Use a configuration file for simpler maintenance and better reusability of your project.
Keeping these values in a separate file is useful if you need to deploy to different environments where your access credentials are different, such as production, development, and QA.
+
. Click *OK*.

[[jwt]]
== JWT Authentication

Authenticate your application directly to Box using a JSON Web Token (JWT).

The following steps describe how to configure Box Connector using JWT:

* <<create-an-app>>
* <<generate-a-keypair>>
* <<export-and-add>>


[[create-an-app]]
=== Create an App

. Go to the https://app.box.com/developers/console[Developer Console].
. Select *Create New App*.
. Select *Custom App* for the type of application.
. Select *Server Authentication (with JWT)* for the type of authentication.
. Provide a name for the application.
. Click *Create App*.

image::box-custom-app-select.png[Custom app selection]


[[generate-a-keypair]]
=== Generate a Keypair

. Download https://keystore-explorer.org[KeyStore Explorer].
. Open the application and select *Create a new KeyStore*.
. Select *JKS*.
. Click *OK*.
. Click *Save*.

+
image::keystore-jks.png[Create new JKS KeyStore selection]
+

. Click on *Tools* and select *Generate Key Pair*.
. Select *RSA* with a key size of 2048.

+
image::rsa-2048.png[RSA with a key size of 2048 selection]
+

. Click *OK* to prompt the *Generate Key Pair Certificate* dialog box to appear.
. Accept the default settings.

+
image::generate-keypair-certificate.png[Generate Key Pair Certificate dialog box]
+

. Click on the *Name* icon and add the following information:
.. *Common Name (CN)*: mulesoft
.. *Organization Unit (OU)*: mulesoft
.. *Organization Name (O)*: mulesoft
.. *Locality Name (L)*: mulesoft
.. *State Name (ST)*: mulesoft
.. *Country (C)*: CA
. Click *OK*.

+
image::name.png[Information added to the Name icon dialog box]
+

. Click *Save* to prompt the *New Key Pair Entry Alias* dialog box to appear.
. Enter *mulesoft* as the alias.

+
image::keypair-alias.png[Added mulesoft alias to New Key Pair Entry Alias dialog box]
+

. Click *OK* to prompt the *New Key Pair Entry Password* dialog box to appear.
. Enter a new password.

+
image::keypair-password.png[Added password to New Key Pair Entry Password dialog box]
+

. Click *OK* to successfully generate your keypair.


[[export-and-add]]
=== Export and Add the Public Key

. Right-click on the generated keypair and navigate to *Export* > *Export Public Key*.

+
image::export-public-key.png[Navigation for Export Public Key]
+

. Save your keystore and set a password.
. Open the exported public key in the editor and copy all the content.
. Go to the https://app.box.com/developers/console[Developer Console].
. Go to the *Configuration* tab and scroll down to the *Add and Manage Public Keys* section.
. Click *Add a Public Key* and paste all the copied content.

+
image::add-public-key.png[Add Public Key button]
+

. Click *Verify and Save*.
. After successful verification, you will receive the *Public key id*.  +
You can also find other properties that depend on your application, such as *Entity id* and *Box sub type*, in the Developer Console on the *General Settings* tab in the *App Info* section and add them to the Studio configuration.

image::studio-config.png[Studio configuration]

== Next

Now that you have completed configuration, you can try out the Box Connector xref:box-connector-examples.adoc[Examples].

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
